[package]
name = "mapsd"
description = "Find & Replace text in multiple files using an explicit CSV of Before/After pairs."
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Jonarod/mapsd"
repository = "https://github.com/Jonarod/mapsd"
keywords = ["cli", "sed", "map", "replace"]
categories = ["command-line-utilities"]

[dependencies]
env_logger = "0.11.5"
glob = "0.3.1"
log = "0.4.22"
memchr = "2.7.4"
rayon = "1.5"
structopt = "0.3.26"


[dev-dependencies]
tempfile = "3.13.0"


[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
